Testing fix for arrow/calendar icon on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -162,6 +162,7 @@ input[type="text"], input[type="email"], input[type="tel"], select {
 input[type="date"] {
   width: 180px;
   height: 32px;
+  appearance: none;
 }
 
 select {
@@ -178,7 +179,8 @@ select {
   border: none;
   cursor: pointer;
   width: 200px;
-  height: 36px;
+  height: 34px;
+  
 }
 
 /* Styling additional body content */
